--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "format": "prettier --write . --log-level warn",
     "knip": "knip"
   },
   "dependencies": {
@@ -34,6 +35,8 @@
     "eslint-config-next": "15.2.4",
     "knip": "^5.46.2",
     "postcss": "^8.5.3",
+    "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "tailwindcss": "^4.0.17",
     "typescript": "^5.8.2"
   }
