--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "next start",
     "lint": "next lint",
     "format": "prettier --write . --log-level warn",
-    "knip": "knip"
+    "update": "npx npm-check-updates -u",
+    "knip": "knip",
+    "sitemap": "next-sitemap"
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.3",
@@ -22,8 +24,7 @@
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "tailwind-merge": "^3.0.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwind-merge": "^3.0.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
@@ -33,7 +34,7 @@
     "@types/react-dom": "^19.0.4",
     "eslint": "^9.23.0",
     "eslint-config-next": "15.2.4",
-    "knip": "^5.46.2",
+    "knip": "^5.46.3",
     "postcss": "^8.5.3",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
